--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@tanstack/react-table": "^8.13.2",
     "downshift": "^8.4.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-indiana-drag-scroll": "^2.2.0",
     "react-router-dom": "^6.22.2",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.12.2",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
