--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.0.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material": "^5.15.12",
+    "@mui/x-data-grid": "^6.19.6",
+    "@mui/x-date-pickers": "^6.19.6",
     "@tanstack/react-table": "^8.13.2",
+    "axios": "^1.6.7",
     "downshift": "^8.4.0",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
